# poker-game

./: README.md  docker-compose.yml  package-lock.json
backend/: .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: models.py  poker_logic.py
backend/app/db/: database.py
backend/app/repository/: poker_repository.py
backend/tests/: test_api.py  test_main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: action-buttons.tsx  game-log.tsx  hand-history-item.tsx  hand-history.tsx  player-setup.tsx
frontend/components/ui/: button.tsx
frontend/hooks/: use-game-logic.ts
frontend/tests/: poker.spec.ts
poker-backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml
poker-backend/app/: main.py  models.py  schemas.py
poker-backend/app/api/: game.py  hands.py
poker-backend/app/db/: connection.py
poker-backend/app/repository/: hand_repository.py
poker-backend/app/services/: hand_service.py
poker-backend/app/utils/: deck.py
poker-backend/migrations/: 001_create_hands.sql
poker-backend/tests/: test_api.py  test_models.py  test_repository.py  test_service.py
